[package]
name = "huak-rewrite"
version = "0.1.0"
edition = "2021"

[lib]
name = "huak"
path = "./src/huak/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pep440_rs = { git = "https://github.com/konstin/pep440-rs", rev = "3148c9016cbc01a9e6116ae8080b10e14e985487", version = "0.1.1" }
pyproject-toml = "0.3.3"
