[package]
name = "huak-rewrite"
version = "0.1.0"
edition = "2021"

[lib]
name = "huak"
path = "./src/huak/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo", "derive"] }
git2 = "0.16.1"
pep440_rs = { git = "https://github.com/konstin/pep440-rs", rev = "3148c9016cbc01a9e6116ae8080b10e14e985487", version = "0.1.1" }
pyproject-toml = "0.3.3"
reqwest = "0.11.14"
thiserror = "1.0.38"
toml_edit = "0.19.4"

[dev-dependencies]
tempfile = "3.4.0"
